# 3D-Viewer

./: CMakeLists.txt  Doxyfile  Makefile  README.md  resources.qrc
common/: IController.h  IVIew.h  edge.cc  edge.h  types.h  vertex.cc  vertex.h
controller/: controller.cc  controller.h
documentation/: mainpage.md
model/: facade.cc  facade.h  model.cc  model.h  parser.cc  parser.h  transform.cc  transform.h
tests/: dummy_controller.h  test_parser.cc  test_parser.h  test_transformations.cc  tests.h
view/: SaveImageWidget.cc  SaveImageWidget.h  colorpickerlabel.cc  colorpickerlabel.h  controlW.cc  controlW.h  custom_opengl_widget.cc  custom_opengl_widget.h  main.cc  mainwindow.cc  mainwindow.h  projection.cc  projection.h  settingswidget.cc  settingswidget.h
view/shaders/: line_fragment_shader.fsh  line_geometry_shader.gsh  line_vertex_shader.vsh  point_fragment_shader.fsh  point_vertex_shader.vsh
